# browsertrix

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  404.html  CHANGES.md  CITATION.cff  CNAME  Deployment.md  NOTICE  README.md  btrix  build-backend.sh  build-frontend.sh  config.sample.env  dev-values.yaml  docker-compose.podman.yml  docker-compose.yaml  docker-compose.yml  docker-restart.sh  index.html  init-configs.sh  mkdocs.yml  package.json  pylintrc  ruff.toml  run-podman.sh  run-swarm.sh  skaffold.yaml  stop-podman.sh  update-version.sh  version.txt  zip_implementation2.py
backend/: .pylintrc  Dockerfile  archives.py  colls.py  crawlconfigs.py  crawls.py  db.py  dev-requirements.txt  dockerdriver.py  dockerman.py  emailsender.py  invites.py  k8sman.py  main.py  mypy.ini  profiles.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  scheduler.py  storages.py  test-requirements.txt  users.py
backend/btrixcloud/: archives.py  auth.py  background_jobs.py  basecrawls.py  colls.py  crawl_job.py  crawl_logs.py  crawl_updater.py  crawlconfigs.py  crawlmanager.py  crawls.py  db.py  emailsender.py  feature_flags.py  file_uploads.py  invites.py  k8sapi.py  logger.py  main.py  main_bg.py  main_migrations.py  main_op.py  main_scheduled_job.py  manual_archives.py  models.py  operator.py  ops.py  orgs.py  pages.py  pagination.py  profile_job.py  profiles.py  proxies.py  search.py  storages.py  subs.py  uploads.py  userdb.py  users.py  users_router.py  (+5 more)
backend/stubs/: logging.pyi
backend/test/: conftest.py  (+42 more)
(+1567 files in other folders)
